--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div>
 		<h1>Spring App</h1>
-		<a href="main">to main</a>
+		<a href="main">to main Controller</a>
 	</div>
 </body>
 </html>
